fix home bg on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -65,6 +65,9 @@
 
 @include tablet {
 
+    .home-image {
+        background-attachment: scroll;
+    }
 }
 
 @include mobile-lg {
@@ -76,6 +79,7 @@
     .home-image {
         background-image: url(assets/img/bg-index-sm.png);
         margin-top: 4.5rem;
+        background-attachment: scroll;
     }
 
 }
